# tbate-relationships

./: .gitignore  All_relation_ships.ipynb  README.md  crawlling_name_caps_volumes.ipynb  crawlling_novel_text.ipynb  crawlling_persons.ipynb  create_html_relation_ships.py  data_cleansing.ipynb  pyproject.toml  relationship.ipynb
BKPs/: list_df1.json  list_df2.json  list_df3.json  list_df4.json  list_df5.json  list_df6.json  list_df7.json  list_df8.json  list_df9.json
Data/: caps_per_volumes.json  df_persons.json  list_of_caps_url.json
Networks/: AllNovel.html  Volume1.html  Volume2.html  Volume3.html  Volume4.html  Volume5.html  Volume6.html  Volume7.html  Volume8.html  Volume9.html
Novel Volumes/: Volume 1.txt  Volume 2.txt  Volume 3.txt  Volume 4.txt  Volume 5.txt  Volume 6.txt  Volume 7.txt  Volume 8.txt  Volume 9.txt
